charts/support/ingress-nginx/base/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-non-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: main-ingress-point
spec:
  rules:
    - host: nextcloud.vandersleyen.dev
      http:
        paths:
          - backend:
              service:
                name: cloud-nextcloud.nextcloud
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
    - host: me.vandersleyen.dev
      http:
        paths:
          - backend:
              service:
                name: professional-web-frontend.professional-web-frontend
                port:
                  number: 3000
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - nextcloud.vandersleyen.dev
      secretName: nextcloud-tls
    - hosts:
        - me.vandersleyen.dev
      secretName: professional-website-tls
